[package]
name = "D2Copilot"
version = "1.0.1"
description = "Dota2 国服/全球服一键切换托盘工具"
authors = ["you"]
edition = "2021"

[lib]
name = "d2copilot_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
winreg = "0.55"
sysinfo = "0.34"
keyvalues-parser = "0.2"
dirs = "6"
once_cell = "1"
